<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.cascadia.mobas.gybitg.MainActivity"
    android:background="@drawable/gradient">
    <!--tools:showIn="@layout/app_bar_main"-->

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorOrange"
        android:text="@string/add_game"
        android:textColor="@color/colorBodyText"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/enter_new_game_stats"
        android:textColor="@color/bodyTxt"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/points"
        android:textColor="@color/bodyTxt"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Spinner
        android:id="@+id/spinnerPoints"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@color/bodyTxt"
        android:backgroundTint="@color/bodyTxt"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <Spinner
        android:id="@+id/spinnerRebounds"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@color/bodyTxt"
        android:backgroundTint="@color/bodyTxt"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="@+id/spinnerPoints"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/rebounds"
        android:textColor="@color/bodyTxt"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Spinner
        android:id="@+id/spinnerAssists"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@color/bodyTxt"
        android:backgroundTint="@color/bodyTxt"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="@+id/spinnerRebounds"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/assists"
        android:textColor="@color/bodyTxt"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/steals"
        android:textColor="@color/bodyTxt"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Spinner
        android:id="@+id/spinnerSteals"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@color/bodyTxt"
        android:backgroundTint="@color/bodyTxt"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="@+id/spinnerAssists"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <Spinner
        android:id="@+id/spinnerBlocks"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@color/bodyTxt"
        android:backgroundTint="@color/bodyTxt"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="@+id/spinnerSteals"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/blocks"
        android:textColor="@color/bodyTxt"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/turnovers"
        android:textColor="@color/bodyTxt"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Spinner
        android:id="@+id/spinnerTurnovers"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@color/bodyTxt"
        android:backgroundTint="@color/bodyTxt"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="@+id/spinnerBlocks"
        app:layout_constraintTop_toTopOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/minutes_played"
        android:textColor="@color/bodyTxt"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Spinner
        android:id="@+id/spinnerMinutesPlayed"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@color/bodyTxt"
        android:backgroundTint="@color/bodyTxt"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="@+id/spinnerTurnovers"
        app:layout_constraintTop_toTopOf="@+id/textView10" />

    <Button
        android:id="@+id/save_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorOrange"
        android:text="@string/save_button"
        android:textColor="@color/colorBodyText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>