<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="edu.cascadia.mobas.gybitg.ProfileActivity"
    android:background="@drawable/gradient">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />


    <RelativeLayout
        android:id="@+id/profile_header"
        android:layout_width="match_parent"
        android:layout_height="330dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:id="@+id/profile_background_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/court_background_image" />

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="90dp"
                app:srcCompat="@drawable/kendra" />
        </FrameLayout>

        <TextView
            android:id="@+id/profile_name"
            style="@style/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="200dp"
            android:text="@string/profile_name" />

        <TextView
            android:id="@+id/profile_user_position"
            style="@style/profile_quick_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="31dp"
            android:layout_marginBottom="68dp"
            android:text="@string/profile_position" />

        <TextView
            android:id="@+id/position_user_class"
            style="@style/profile_quick_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="40dp"
            android:text="@string/profile_class" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="0dp">

            <TextView
                android:id="@+id/feed_label"
                style="@style/profile_navigation_labels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="38dp"
                android:text="@string/feed_label_text" />

            <TextView
                android:id="@+id/stats_label"
                style="@style/profile_navigation_labels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="115dp"
                android:layout_marginEnd="22dp"
                android:layout_toStartOf="@+id/gallery_label"
                android:text="@string/stats_label_text" />

            <TextView
                android:id="@+id/gallery_label"
                style="@style/profile_navigation_labels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/feed_label"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="135dp"
                android:layout_marginBottom="0dp"
                android:text="@string/gallery_label_text" />

            <TextView
                android:id="@+id/contact_label"
                style="@style/profile_navigation_labels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="41dp"
                android:text="@string/contact_label_text" />
        </RelativeLayout>


    </RelativeLayout>
    <View
        android:layout_height="5dp"
        android:layout_width="match_parent"
        android:background="@color/colorOrange"/>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/profile_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>