<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.cascadia.mobas.gybitg.ProfileCreateActivity"
    android:background="@drawable/gradient"
    >

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />


    <Button
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:background="@android:color/transparent"
        android:textColor="@color/bodyTxt"
        android:layout_gravity="left"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="60dp"
        android:text="@string/title_create_profile"
        android:textAlignment="center"
        android:textColor="@color/textHeadingBtns"
        android:textSize="20dp" />


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textColorHint="@color/bodyTxt"
                android:backgroundTint="@color/bodyTxt">

                <EditText
                    android:id="@+id/firstNameinput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_firstName"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/bodyTxt"
                    android:textColorHint="@color/bodyTxt"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/bodyTxt"
                android:backgroundTint="@color/bodyTxt">

                <EditText
                    android:id="@+id/lastNameinput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_lastName"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/bodyTxt"
                    android:textColorHint="@color/bodyTxt"
                    />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/bodyTxt"
                android:backgroundTint="@color/bodyTxt">

                <EditText
                    android:id="@+id/schoolinput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_school"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/bodyTxt"
                    android:textColorHint="@color/bodyTxt"
                    />

            </android.support.design.widget.TextInputLayout>

          <!--  <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:textColorHint="@color/bodyTxt"
                android:backgroundTint="@color/bodyTxt">

                <EditText
                    android:id="@+id/highSchoolTeaminput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_highSchoolTeam"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/bodyTxt"
                    android:textColorHint="@color/bodyTxt"
                    />

            </android.support.design.widget.TextInputLayout>-->

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/bodyTxt"
                android:backgroundTint="@color/bodyTxt">

                <EditText
                    android:id="@+id/uaaTeaminput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_aauTeam"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/bodyTxt"
                    android:textColorHint="@color/bodyTxt"
                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/bodyTxt"
                android:backgroundTint="@color/bodyTxt">

                <EditText
                    android:id="@+id/classinput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_class"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/bodyTxt"
                    android:textColorHint="@color/bodyTxt"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/bodyTxt"
                android:backgroundTint="@color/bodyTxt">

                <EditText
                    android:id="@+id/positioninput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/prompt_position"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/bodyTxt"
                    android:textColorHint="@color/bodyTxt" />
            </android.support.design.widget.TextInputLayout>





            <Button
                android:id="@+id/save_changes_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_save_changes_button"
                android:textStyle="bold"
                android:textColor="@color/bodyTxt"
                android:background="@color/colorAccent"/>


        </LinearLayout>
    </ScrollView>
</LinearLayout>




